# gnomon

./: .gitignore  CLAUDE.md  Cargo.toml  PROBLEMS.md  README.md  SPEC-TODOS.md  gnomon.ebnf  initial-sketch.md
.config/tracey/: config.styx
.github/workflows/: ci.yml
crates/gnomon-db/: Cargo.toml
crates/gnomon-db/src/: eval.rs  input.rs  lib.rs  queries.rs
crates/gnomon-db/src/eval/: cache.rs  desugar.rs  export.rs  import.rs  interned.rs  literals.rs  lower.rs  merge.rs  mod.rs  render.rs  rrule.rs  shape.rs  types.rs
crates/gnomon-export/: Cargo.toml
crates/gnomon-export/src/: ical.rs  jscal.rs  lib.rs
crates/gnomon-import/: Cargo.toml
crates/gnomon-import/src/: lib.rs
crates/gnomon-parser/: Cargo.toml
crates/gnomon-parser/src/: ast.rs  lexer.rs  lib.rs  parser.rs  preprocess.rs  syntax_kind.rs  validate.rs
crates/gnomon-parser/src/ast/: generated.rs  support.rs
crates/gnomon-parser/src/parser/: decl.rs  every.rs  expr.rs
crates/gnomon-rrule/: Cargo.toml
crates/gnomon-rrule/src/: expand.rs  iter.rs  lib.rs  table.rs  types.rs  util.rs
examples/icloud-holidays/: main.gnomon
examples/readme-examples/: single-file.gnomon
examples/readme-examples/multiple-files/: 2026.gnomon  main.gnomon
examples/stress-test/: awkward-grammar.gnomon  composition.gnomon  kitchen-sink.gnomon  let-in-trap.gnomon
fuzz/: Cargo.toml
fuzz/corpus/seed/: binding  booleans  calendar_basic  comment  complex_duration  edge_integers  error_recovery  event_prefix  event_short  event_with_record  every_recurrence  every_weekday  every_year_on  include  list  multiple_decls  nested_record  task_short  task_with_datetime  uri_and_atom
fuzz/fuzz_targets/: fuzz_eval.rs  fuzz_merge.rs  fuzz_parse.rs  fuzz_roundtrip.rs
spec/: gnomon.md  sundial.md
src/: main.rs  repl.rs
tests/: cli.rs
