[workspace]
members = ["crates/gnomon-parser", "crates/gnomon-db", "crates/gnomon-import", "crates/gnomon-rrule"]

[package]
name = "gnomon"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
etcetera = "0.8"
gnomon-db = { path = "crates/gnomon-db" }
gnomon-parser = { path = "crates/gnomon-parser" }
rustyline = "15"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
