[workspace]
members = ["crates/gnomon-parser", "crates/gnomon-db", "crates/gnomon-import", "crates/gnomon-rrule"]

[workspace.lints.clippy]
# RESTRICTIONS
allow_attributes = "deny"
mod_module_files = "deny"

# PEDANTIC
cast_lossless = "warn"
cast_possible_truncation = "deny"
fn_params_excessive_bools = "warn"
if_then_some_else_none = "warn"
ignore_without_reason = "deny"
ignored_unit_patterns = "deny"

[package]
name = "gnomon"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
etcetera = "0.8"
gnomon-db = { path = "crates/gnomon-db" }
gnomon-parser = { path = "crates/gnomon-parser" }
rustyline = "15"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[lints]
workspace = true
