[package]
name = "gnomon-db"
version = "0.1.0"
edition = "2024"

[dependencies]
gnomon-parser = { path = "../gnomon-parser" }
gnomon-import = { path = "../gnomon-import" }
gnomon-rrule = { path = "../gnomon-rrule" }
salsa = "0.26"
rowan = "0.16"
jiff = "0.2"
uuid = { version = "1", features = ["v5"] }
ureq = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
etcetera = "0.8"

[dev-dependencies]
expect-test = "1"
tempfile = "3"

[lints]
workspace = true
