[package]
name = "gnomon-export"
version = "0.1.0"
edition = "2024"

[dependencies]
gnomon-import = { path = "../gnomon-import" }
calico = "0.5"
mitsein = "0.8"
calendar-types = "0.1"
jscalendar = { version = "0.1", features = ["serde_json"] }
serde_json = "1"

[dev-dependencies]
expect-test = "1"

[lints]
workspace = true
